package foo.bar.imports.sub;

message SubMessagePackageImports {
  optional int32 a = 1;
}

